feat: jtw add upload em massa via user adm funcionando